syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "DisconnectionSuccessStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/utility/InstanceIdentifier.proto";

message DisconnectionSuccess {

  vire.utility.BasePayload _base = 1; // Base class

  vire.utility.InstanceIdentifier setup_id            = 100; // The setup identifier

}
